Edicion de contenido

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <h2>Beneficios</h2>
     <ul>
-      <li>Permite al sistema identificar y gestionar usuarios de manera individual.</li>
+      <li>Permite al sistema poder identificar y gestionar usuarios de manera individual.</li>
       <li>Proporciona una experiencia personalizada a cada usuario registrado.</li>
       <li>Mejora la seguridad al autenticar usuarios mediante contraseñas.</li>
     </ul>
