--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <ul>
       <li>Permite al sistema poder identificar y gestionar usuarios de manera individual.</li>
       <li>Proporciona una experiencia personalizada a cada usuario registrado.</li>
-      <li>Mejora la seguridad al autenticar usuarios mediante contraseñas.</li>
+      <li>Mejora la seguridad al autenticar los datos del usuarios mediante contraseñas.</li>
     </ul>
   </div>
 </body>
